--- a/pages/Customer/Guest/Stalls-guest.html
+++ b/pages/Customer/Guest/Stalls-guest.html
@@ -11,37 +11,81 @@
 </head>
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container">
-      <a class="navbar-brand" href="#">HawkerGo</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="mainNavbar">
-        <ul class="navbar-nav mx-auto">
-          <li class="nav-item"><a class="nav-link" href="home-page-guest.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link active" href="#">Order</a></li>
-          <li class="nav-item"><a class="nav-link" href="customerEng-guest.html">Customer Portal</a></li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="moreDropdown" role="button" data-bs-toggle="dropdown">
-              More
-            </a>
-            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="moreDropdown">
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="orderTracking-guest.html">Order Tracking</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="likedItems-guest.html">Liked Items</a></li>
-            </ul>
-          </li>
-        </ul>
-        <div class="d-flex align-items-center">
-          <a href="main-login.html" class="btn btn-link text-white text-decoration-none me-3">Login</a>
-          <a href="main-login.html" class="btn btn-light fw-bold">Sign Up</a>
-        </div>
-      </div>
-    </div>
-  </nav>
+    <nav
+        class="navbar navbar-expand-lg navbar-dark fixed-top"
+        style="background: #305652; box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2)"
+      >
+        <div class="container">
+          <a class="navbar-brand" href="#">
+            <span class="ms-2">HawkerGo</span>
+          </a>
 
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#mainNavbar"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="mainNavbar">
+            <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="home-page-user.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="hawker-centers-user.html">Order</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="customerEng-user.html"
+                  >Customer Portal</a
+                >
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  id="moreDropdown"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  More
+                </a>
+                <ul
+                  class="dropdown-menu dropdown-menu-dark"
+                  aria-labelledby="moreDropdown"
+                >
+                  <li>
+                    <a class="dropdown-item" href="LoyaltyDiscount.html"
+                      >Loyalty & Discount</a
+                    >
+                  </li>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li>
+                    <a class="dropdown-item" href="orderTracking-user.html"
+                      >Order Tracking</a
+                    >
+                  </li>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li>
+                    <a class="dropdown-item" href="likedItems-user.html"
+                      >Liked Items</a
+                    >
+                  </li>
+                </ul>
+              </li>
+            </ul>
+
+            <div class="d-flex align-items-center">
+              <a href="main-login.html" class="btn btn-light fw-bold"
+                >Log Out</a
+              >
+            </div>
+          </div>
+        </div>
+      </nav>
   <div class="container mt-5 pt-5">
     <h1 class="text-center mb-4">🌿 Stalls</h1>
     
@@ -142,6 +186,49 @@
       </section>
     </main>
   </div>
+  
+    <footer
+      class="text-white py-4 mt-5"
+      style="background: #305652; box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.2)"
+    >
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
+            <a
+              href="#"
+              class="text-white text-decoration-none d-flex align-items-center justify-content-center justify-content-md-start"
+            >
+              <span class="ms-2 fw-bold">HawkersGo</span>
+            </a>
+          </div>
+          <div class="col-md-8 text-center text-md-end">
+            <ul class="list-inline mb-0">
+              <li class="list-inline-item me-3">
+                <a href="#" class="text-white-50 text-decoration-none"
+                  >Privacy Policy</a
+                >
+              </li>
+              <li class="list-inline-item me-4">
+                <a href="#" class="text-white-50 text-decoration-none">Terms</a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" class="text-white ms-2">FB</a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" class="text-white ms-2">IG</a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" class="text-white ms-2">X</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <hr class="mt-4 border-secondary" />
+        <div class="text-center text-white-50 small">
+          &copy; 2024 HawkersGo. All rights reserved.
+        </div>
+      </div>
+    </footer>
 
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
