--- a/pages/Customer/User/Checkout-user.html
+++ b/pages/Customer/User/Checkout-user.html
@@ -24,10 +24,7 @@
   </head>
   <body class="p-0">
     <!-- Navbar -->
-    <nav
-      class="navbar navbar-expand-lg navbar-dark fixed-top"
-      style="background: #305652; box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2)"
-    >
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background: #305652; box-shadow: 0 2px 10px rgba(0,0,0,0.2);">
       <div class="container">
         <a class="navbar-brand" href="#">
           <span class="ms-2">HawkerGo</span>
