--- a/pages/Customer/User/customerEng-user.html
+++ b/pages/Customer/User/customerEng-user.html
@@ -31,10 +31,7 @@
   <body>
     <header>
       <!-- place navbar here -->
-      <nav
-        class="navbar navbar-expand-lg navbar-dark fixed-top"
-        style="background: #305652; box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2)"
-      >
+      <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background: #305652; box-shadow: 0 2px 10px rgba(0,0,0,0.2);">
         <div class="container">
           <a class="navbar-brand" href="#">
             <span class="ms-2">HawkerGo</span>
