--- a/pages/Login and Signup/main-login.html
+++ b/pages/Login and Signup/main-login.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background: #305652; box-shadow: 0 2px 10px rgba(0,0,0,0.2);">
         <div class="container">
             <a class="navbar-brand fw-bold">HawkersGo</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -51,7 +51,7 @@
         </form>
     </main>
 
-    <footer class="bg-dark text-white py-4 mt-5">
+    <footer class="text-white py-4 mt-5" style="background: #305652; box-shadow: 0 -2px 10px rgba(0,0,0,0.2);">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
